fix overlapping numbers when folding (#3)

--- a/styles/gemfile-gutter.less
+++ b/styles/gemfile-gutter.less
@@ -1,3 +1,7 @@
 atom-text-editor .gutter[gutter-name="com.thutterer.gemfile-gutter"] {
   width: 100px;
+
+  .end-line-marker {
+    width: 100%;
+  }
 }
